_code/_promo/_assets/stylesheets/footer.scss
footer {
  position: relative;
  margin: 0 auto $baseline * 2;
  background: white;
  @media screen and (min-width: $bp) {
    margin: 0 0 $baseline * 2;
  }
  @media screen and (min-width: $bp-largest) {
    max-width: $bp-largest;
    margin: 0 auto;
  }
}

.m-update {
  width: 100%;
  > h3 {
    @include font-size(3.2);
    margin: 0 0 ($baseline * 10);
    line-height: 1.3125;
  }
  > p {
    @include font-size(2);
    line-height: 1.25; // 25px
    color: $darker-gray;
    margin-bottom: ($baseline * 8);
  }

  @media screen and (min-width: $bp-small) {
    width: 90%;
  }

  @media screen and (min-width: $bp) {
    width: ($column * 6) + ($gutter * 5);
  }
}

.contact {
  text-align: center;
  @media screen and (min-width: $bp-small) {
    float: left;
    text-align: left;
  }
}

.contact-link {
  @include font-size(1.2);
  @include transition (all $animation-duration ease-in-out);
  position: relative;
  margin-right: $baseline * 5;
  padding-top: $baseline * 5 + 1;
  color: $gray;
  text-shadow: 1px 1px 0px transparentize(white, 0.25), -1px -1px 1px transparentize(white, 0.25);
  text-transform: uppercase;
  letter-spacing: 2px;
  &:before {
    @include font-size(2.4);
    @include position(absolute, 0px 0px 0 0);
    width: 100%;
    content: "\e7d7";
    font-family: $font-stack-social;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    text-align: center;
    speak: none;
    -webkit-font-smoothing: antialiased;
  }
  &:last-child { margin-right: 0;}
}

.contact-link--email {
  @extend .contact-link;
  &:before {
    font-family: $font-stack-icons;
    content: "\e494";
  }
}

.contact-link--twitter {
  @extend .contact-link;
  &:before {
    content: "\e7d1";
  }
}

.contact-link--dribbble {
  @extend .contact-link;
  &:before {
    content: "\e7d7";
  }
}

.social {
  margin-top: ($baseline * 4);
  text-align: center;
  > .fb-share-button {
    margin-right: $baseline * 4 - 3;
    line-height: 7px; // aligns the two buttons
    cursor: pointer;
  }
  > #twitter-widget-0 { cursor: pointer;}
  @media screen and (min-width: $bp-small) { 
    float: right;
    margin-top: -($baseline * 4 - 4);
    text-align: left;
  }
}

.m-subnav {
  @include font-size(2);
  margin-bottom: $baseline * 3 - 4;
  line-height: 1.25; // 25px
  text-transform: uppercase;
  letter-spacing: 2px;
  > a {
    display: block;
    margin: 0 0 ($baseline * 2);
    text-align: center;
    color: $dark-gray;
    &:last-child { margin-bottom: 0;}
    &:hover {
      color: $pink;
      text-decoration: underline;
    }
    @media screen and (min-width: $bp-small) {
      display: inline-block;
      margin: 0 ($baseline * 5) 0 0;
      text-align: left;
      &:last-child { margin-right: 0;}
    }
  }
}

small {
  @include font-size(1.4);
  display: block;
  line-height: 0.77777778; // 18px
  text-align: center;
  color: $light-gray;
  @media screen and (min-width: $bp-small) {
    text-align: left;
  }
}

.m-divider {
  margin-bottom: $baseline * 9 - 2;
  display: block;
  border: 1px dashed $lightest-gray;
}

.m-divider--small-margin {
  @extend .m-divider;
  margin-bottom: $baseline * 3.5;
}

